--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "awesome-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "engines": {
+    "npm": "8.1.0",
+    "node": "16.13.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
