--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@apollo/datasource-rest": "^4.3.2",
     "@apollo/server": "^4.0.0",
+    "@as-integrations/aws-lambda": "^1.1.0",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.15",
+    "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^4.9.4"
   }
 }
