--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ functions:
     # Make sure your file path is correct!
     # (e.g., if your file is in the root folder use server.graphqlHandler )
     # The format is: <FILENAME>.<HANDLER>
-    handler: src/index.graphqlHandler # highlight-line
+    handler: dist/index.graphqlHandler # highlight-line
     events:
       - httpApi:
           path: /
