--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@apollo/datasource-rest": "^4.3.2",
     "@apollo/server": "^4.3.0",
     "@as-integrations/aws-lambda": "^1.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
